tests/ui/layout/unknown-when-no-type-parameter.stderr
warning: cannot use constants which depend on trivially-false where clauses
  --> $DIR/unknown-when-no-type-parameter.rs:11:10
   |
LL |     [(); size_of::<<() as Project>::Assoc>()];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #76200 <https://github.com/rust-lang/rust/issues/76200>
   = note: `#[warn(const_evaluatable_unchecked)]` on by default

error[E0080]: evaluation of constant value failed
  --> $DIR/unknown-when-no-type-parameter.rs:11:10
   |
LL |     [(); size_of::<<() as Project>::Assoc>()];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the type `<() as Project>::Assoc` has an unknown layout
   |
note: inside `std::mem::size_of::<<() as Project>::Assoc>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
